# Dentora

./: .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.claude/: settings.json
.claude/agents/: api-docs-writer.md  async-worker-specialist.md  backend-architect.md  code-quality-reviewer.md  data-model-reviewer.md  drf-api-engineer.md  test-engineer.md
.claude/commands/: create-celery-task.md  create-django-domain-model.md  create-drf-endpoint.md  debug-backend-bug.md  document-api-swagger.md  python-quality-review.md  review-django-migration.md  write-pytest-factory-tests.md
.claude/hooks/: async-task-warning.sh  migration-review-warning.sh  python-quality-check.sh  run-relevant-tests.sh  swagger-drift-warning.sh
dentora/: __init__.py
dentora/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
dentora/accounts/migrations/: 0001_initial.py
dentora/accounts/tests/: factories.py  test_views.py  (+3 more)
dentora/appointments/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
dentora/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
dentora/core/: admin.py  apps.py  exceptions.py
dentora/dentists/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
dentora/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py
dentora/patients/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
(+9 files in other folders)
